Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111423

tst_WaylandCompositor::simpleKeyboard() failed when update dependencies

    XMLWordPrintable

Details

    • Linux/Wayland
    • 101e57d37 (dev), c62b27346 (dev)

    Description

      https://codereview.qt-project.org/c/qt/qtwayland/+/461590

      https://testresults.qt.io/logs/qt/qtwayland/e25fbe3ef2f39257e429986a686a02aed53bb64d/LinuxopenSUSE_15_4x86_64LinuxopenSUSE_15_4x86_64GCCqtci-linux-openSUSE-15.4-x86_64-50-4a447bSccache_UseConfigure_WarningsAreErrors/6d5b7fedf615a6d0729604771b07181cf5b6c0fc/test_1683103380/log.txt.gz

      1468: ********* Start testing of tst_WaylandCompositor *********
       FAIL!  : tst_WaylandCompositor::simpleKeyboard() Compared values are not the same
          Actual   (mockKeyboard->m_lastKeyCode): 30
          Expected (125u)                       : 125
          Loc: [/home/qt/work/qt/qtwayland/tests/auto/compositor/compositor/tst_compositor.cpp(212)]
       Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 15251ms
      

      Attachments

        For Gerrit Dashboard: QTBUG-111423
        # Subject Branch Project Status CR V

        Activity

          People

            liaqi Liang Qi
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes