tests: fix tst_WaylandCompositor::simpleKeyboard()

since the default value of superAsMeta and hyperAsMeta in
QXkbCommon::keysymToQtKey() were changed in qtbase
610bafdfc58e90f24e3908e1a5932e2f510eac7e.

And Qt Wayland Compositor needs to distinguish Super/Hyper/Meta keys.

Fixes: QTBUG-111423
Change-Id: I531c4f6adc019e59d4a7d57853a459ea512028a2
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>